# BitCrafty-Extractor

./: .gitignore  LICENSE  README.md  audio_test.py  bitcrafty-cli.py  bitcrafty-extractor.py  pyproject.toml  requirements.txt  test_error_fixes.py  test_layout.py  test_logging_behavior.py  test_normalize.py  validation_demo.py
.github/instructions/: extractor_coding_standards.instructions.md  extractor_coding_standards.md
.github/workflows/: ci.yml
config/: default.yaml
docs/: CRAFT_DUPLICATE_DETECTION.md
exports/: crafts.json  items.json
reconciliator/: README.md  README_concise.md  __init__.py  auto_fix_validator.py  debug_item_issues.py  reconciliator.py  validate_data.py
requirements/: base.txt  dev.txt  test.txt
scripts/: manual_validation.py  validation_viewer.py
src/bitcrafty_extractor/: __init__.py  __main__.py  main.py  realtime_extractor.py
src/bitcrafty_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bitcrafty_extractor/ai_analysis/: prompts.py  prompts_new.py  vision_client.py
src/bitcrafty_extractor/audio/: __init__.py  audio_manager.py
src/bitcrafty_extractor/capture/: hotkey_handler.py  window_capture.py
src/bitcrafty_extractor/config/: config_manager.py
src/bitcrafty_extractor/core/: config_manager.py  ocr_engine.py  window_monitor.py
src/bitcrafty_extractor/export/: __init__.py  export_manager.py
src/bitcrafty_extractor/utils/: logging_utils.py
test/: README.md  __init__.py  config_loader.py  conftest.py  test_hotkeys.py  test_window_capture.py
test/ai_analysis/: README.md  __init__.py  test_prompts.py  test_provider_comparison.py
test/integration/: README.md  test_configuration_validation.py  test_craft_update_integration.py
test/unit/: test_bitcrafty_extractor.py
test/unit/ai_analysis/: test_prompts.py  test_quantity_normalization.py  test_vision_client.py
test/unit/capture/: test_hotkey_handler.py  test_window_capture.py
test/unit/config/: test_config_manager.py  test_config_validation.py
test/unit/export/: test_export_manager.py
tests/unit/: test_logging_utils.py
tests/unit/core/: __init__.py  test_config_manager.py  test_window_monitor.py
